terraform/gateway.tf
//gateways.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.cicd.id
}
